# aws-robot

./: README.rst  pyproject.toml
.github/workflows/: codeql-analysis.yml
aws_robot/: cli.py
